--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.perusdajepara.j_adsqrcodegenerator"
+        applicationId 'com.perusdajepara.jadsqrcode'
         minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
@@ -20,19 +20,33 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
+    implementation 'com.android.support:support-v4:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     // encryption
     implementation 'com.github.tozny:java-aes-crypto:1.1.0'
-    compile 'com.google.zxing:core:3.3.2'
-    compile 'com.journeyapps:zxing-android-embedded:3.4.0@aar'
-    compile 'com.github.simbiose:Encryption:2.0.1'
+    implementation 'com.google.zxing:core:3.3.2'
+    implementation 'com.journeyapps:zxing-android-embedded:3.4.0@aar'
+    implementation 'com.github.simbiose:Encryption:2.0.1'
+    implementation 'com.github.kenglxn.QRGen:android:2.4.0'
+    implementation 'org.jetbrains.anko:anko:0.10.5'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+
+    implementation 'com.firebaseui:firebase-ui-database:3.3.1'
+
+    implementation 'io.paperdb:paperdb:2.6'
 }
+
+apply plugin: 'com.google.gms.google-services'
